# leetcode_agent_training

./: .gitignore  CLAUDE.md
leetcode_agent/: .gitignore  CHANGELOG.md  LICENSE  README.md  TASK.md  demo.tape  pyproject.toml
leetcode_agent/src/lc/: agent.py  cli.py  codetop_api.py  config.py  db.py  display.py  leetcode_api.py  models.py  planner.py  tool_defs.py  tools.py  ui.py  workspace.py
leetcode_agent/src/lc/tool_impl/: __init__.py  memory.py  problems.py  subagents.py  workspace.py
leetcode_agent/tests/: test_classification.py  test_dispatch.py  test_memory_tools.py
sft_rl_training/: experiment_log.md  ideas_and_progress.md
sft_rl_training/data/: generate_sft_data.py
sft_rl_training/scripts/: 2026-04-18-100525-local-command-caveatcaveat-the-messages-below.txt  analyze_rubric_discrimination.py  bench_c23.sub  build_benchmark.py  build_rl_dataset_v1.py  eval_sft.py  generate_free30.py  generate_no_tool_data.py  generate_rl_instances.py  generate_trajectories.py  grpo.sub  grpo_dryrun.sub  grpo_v1.sub  grpo_v2.sub  judge_rollouts.py  merge_sft_adapter.py  no_tool_gen.sub  rollout_on_instances.py  run_bench_c23.sh  run_benchmark.py  run_grpo.sh  run_grpo_dryrun.sh  run_grpo_v1.sh  run_grpo_v2.sh  run_no_tool_gen.sh  run_sft.sh  run_sft_exp008.sh  run_sft_real.sh  serve_model.py  sft.sub  sft_exp008.sub  sft_real.sub  train_grpo.py  train_grpo.py.bak_pre_debug  train_sft.py  view_rl_instance.py
