[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-agent"
version = "0.2.0"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "QiqianFu"}]
dependencies = [
    "rich>=13.0",
    "openai>=1.0",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "prompt_toolkit>=3.0",
    "markdownify>=0.11",
    "ddgs>=7.0",
]

[project.scripts]
leetcode = "lc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
ignore_missing_imports = true
# Opt-in strictness
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
